<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background3"
    tools:context="pavanasahithi.movieapp.MovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_backdrop_poster"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY" />

        <Button
            android:id="@+id/id_button_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#90b39c"
            android:fontFamily="sans-serif"
            android:padding="16dp"
            android:text="@string/add_to_favourite"
            android:textColor="#540a0a"
            android:textStyle="italic|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif"
                    android:text="@string/title_tv"
                    android:textSize="16sp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:id="@+id/id_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textColor="#930606"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif"
                    android:text="@string/rating_tv"
                    android:textSize="16sp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:id="@+id/id_user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text=""
                    android:textColor="#930606"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <RatingBar
                android:id="@+id/id_rating_bar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#d7e1e2"
                android:numStars="10"
                android:scaleX="1.0"
                android:scaleY="1.0"
                android:stepSize="1.0"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="10dp"
                    android:text="@string/release_date_tv"
                    android:textSize="16sp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:id="@+id/id_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textColor="#930606"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/language_tv"
                    android:textSize="16sp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:id="@+id/id_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text=""
                    android:textColor="#930606"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/id_videos_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/id_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/synopsis_tv"
            android:textSize="16sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/id_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text=""
            android:textColor="#930606"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/reviews_tv"
            android:id="@+id/id_tv_reviews"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/id_reviews_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>